--- a/translations/bg.json
+++ b/translations/bg.json
@@ -127,7 +127,7 @@
     "learn_more_about_data_storage": "Ние съхраняваме лична информация като потребителски имена и имейл адреси, за да управляваме акаунти на този сайт и за да спазваме законите за поверителност, трябва да поставите отметка в това квадратче, за да посочите, че сте съгласни с това използване на лична информация. За да научите повече за това каква информация събираме и как я използваме, моля, вижте нашата политика за поверителност и нашите общи условия.",
     "learn_more_about_licensing": "Поставете отметка в това квадратче, ако искате да приложите некомерсиален лиценс към качено съдържание. Това означава, че всеки може да копира и използва повторно вашите снимки и/или наблюдения, без да иска разрешение, стига да ви даде кредит и да не използва произведенията с търговска цел. Можете да изберете друг лиценз или да премахнете лиценза по-късно, но това е най-добрият лиценз за споделяне с изследователи.",
     "about_personal_information": "About Personal Information",
-    "about_licenses": "About Licenses",
+    "about_licenses": "Относно лицензите",
     "transfer_data": "I consent to allow my personal information to be transferred to the United States of America",
     "learn_more_about_data_transfer": "Some data privacy laws, like the European Union's General Data Protection Regulation (GDPR), require explicit consent to transfer personal information from their jurisdictions to other jurisdictions where the legal protection of this information is not considered adequate. As of 2020, the European Union no longer considers the United States to be a jurisdiction that provides adequate legal protection of personal information, specifically because of the possibility of the US government surveilling data entering the US. It is possible other jurisdictions may have the same opinion.",
     "learn_more_about_data_transfer_2": "Using iNaturalist requires the storage of personal information like your email address, all iNaturalist data is stored in the United States, and we cannot be sure what legal jurisdiction you are in when you are using iNaturalist, so in order to comply with privacy laws like the GDPR, you must acknowledge that you understand and accept this risk and consent to transferring your personal information to iNaturalist's servers in the US.",
@@ -138,8 +138,8 @@
     "log_in_with_inat": "Log in with your iNaturalist account",
     "username": "Потребителско име",
     "username_email": "Потребителско име / имейл",
-    "username_or_email": "Username or email",
-    "password": "Password",
+    "username_or_email": "Потребителско име или имейл",
+    "password": "Парола",
     "forgot_password_header": "Забравена парола",
     "forgot_password": "Забравили сте паролата си?",
     "log_in": "Влез",
@@ -212,14 +212,14 @@
     "badge_name_october": "High Seas Badge",
     "badge_name_november": "Forests Badge",
     "badge_name_december": "Climate Badge",
-    "op": "Our Planet",
+    "op": "Нашата планета",
     "start_now": "Start now",
     "mission_1_april": "Find 10 new species!",
     "april_description": "We are not alone on our planet! Wildlife is always around us whether we notice it or not. In our homes, gardens, towns and cities there are hidden worlds to be discovered. Seek in and around your home, and you may be surprised by how many wild neighbours you find.\n\nSeek out plants, fungi, bugs, birds and animals. Watch out for signs of more elusive life – poo, fur, nests, tracks and webs can all give clues to other creatures that share your home.",
-    "start_challenge": "Start the challenge",
-    "open_camera": "Open camera",
+    "start_challenge": "Начало на предизвикателството",
+    "open_camera": "Отваряне на камерата",
     "view_badge": "View badge",
-    "your_mission": "Your mission:",
+    "your_mission": "Вашата мисия:",
     "mission_1_may": "Find any 4 different birds, mammals, reptiles, amphibians, or fish",
     "mission_2_may": "Find 4 different insects",
     "mission_3_may": "Find 3 different arachnids",
@@ -286,10 +286,10 @@
     "learn_more": "It’s been added to your observations.\nLearn more about this species here:",
     "learn_more_no_location": "Learn more about this species here:",
     "view_species": "View Species",
-    "back": "Back to Camera",
+    "back": "Обратно към камерата",
     "no_identification": "We weren’t able to identify this photo",
     "sorry": "Sorry about that, Seek is still learning!\n\nYou can try a different angle, zoom in, or try to get a clearer shot of the organism.",
-    "take_photo": "Take another photo",
+    "take_photo": "Заснемане на друга снимка",
     "common_ancestor": "But Seek couldn’t identify the exact species.\n\nYou can try a different angle, zoom in, or try to get a clearer shot of the organism.",
     "believe": "We believe this is a member of",
     "genus": "We believe this is a member of the genus",
@@ -343,19 +343,19 @@
     }
   },
   "camera": {
-    "label": "Camera",
-    "on": "on",
-    "off": "off",
+    "label": "Камера",
+    "on": "вкл.",
+    "off": "изкл.",
     "scan": "Keep scanning the environment for organisms to identify!",
     "scan_class": "Try different angles till you can get the identification to species!",
     "scan_genus": "Almost at species!",
     "scan_species": "That’s it! Now take a picture to add this species to your observations.",
-    "kingdom": "kingdom",
-    "phylum": "phylum",
-    "class": "class",
-    "order": "order",
-    "family": "family",
-    "genus": "genus",
+    "kingdom": "царство",
+    "phylum": "тип",
+    "class": "клас",
+    "order": "ред",
+    "family": "семейство",
+    "genus": "род",
     "species": "species",
     "error_permissions": "We need access to the camera to help you identify species!",
     "error_gallery": "We need access to your photo library to save photos you take!",
@@ -375,8 +375,8 @@
     "filters_off": "Filters off"
   },
   "gallery": {
-    "label": "Photos",
-    "photo_library": "Photo Library"
+    "label": "Снимки",
+    "photo_library": "Фотогалерия"
   },
   "camera_help": {
     "title": "Seek's Camera",
@@ -398,20 +398,20 @@
     "button": "Identify Photo"
   },
   "levels": {
-    "tadpole": "Tadpole",
+    "tadpole": "Попова лъжичка",
     "cub": "Cub",
-    "tracker": "Tracker",
-    "surveyor": "Surveyor",
-    "naturalist": "Naturalist",
-    "seeker": "Seeker",
-    "explorer": "Explorer",
-    "adventurer": "Adventurer",
-    "biologist": "Biologist"
+    "tracker": "Преследвач",
+    "surveyor": "Земемер",
+    "naturalist": "Натуралист",
+    "seeker": "Търсач",
+    "explorer": "Изследовател",
+    "adventurer": "Приключенец",
+    "biologist": "Биолог"
   },
   "badges": {
-    "your_level": "Your Level",
+    "your_level": "Вашето ниво",
     "login": "Log in with iNaturalist to post observations to the online community!",
-    "achievements": "Achievements",
+    "achievements": "Постижения",
     "observe_plural": {
       "zero": "Observe {{count}} species to get to the next level!",
       "one": "Observe {{count}} species to get to the next level!",
@@ -421,7 +421,7 @@
       "other": "Observe {{count}} species to get to the next level!"
     },
     "observe_max": "You’ve reached the max level on Seek!",
-    "observe_species": "Observe",
+    "observe_species": "Наблюдаване",
     "species_badges": "Species Badges",
     "challenge_badges": "Challenge Badges",
     "observed": "Species\nObserved",
@@ -525,41 +525,41 @@
     "taxonomy_about": "Класификацията на организма на всяко ниво на дървото на живота.",
     "inat_obs": "Наблюдения на iNaturalist",
     "inat_obs_about": "The total number of iNaturalist observations created of this species nearby and worldwide.",
-    "monthly_obs": "Seasonality",
+    "monthly_obs": "Сезонност",
     "monthly_obs_about": "Worldwide observations by month for this organism.",
-    "worldwide": "Worldwide",
+    "worldwide": "По целия свят",
     "seen_on": "You observed it on {{date}}",
-    "endangered": "Endangered",
-    "endemic": "Endemic",
-    "native": "Native",
-    "threatened": "Threatened",
-    "introduced": "Introduced",
+    "endangered": "Застрашено",
+    "endemic": "Ендемично",
+    "native": "Естествено",
+    "threatened": "Застрашено",
+    "introduced": "Представено",
     "endangered_about": "This species is in danger of going extinct throughout all or a significant portion of its range.",
     "endemic_about": "This species naturally occurs in this area and isn’t found anywhere else.",
     "native_about": "This species naturally occurs in this area and was not brought here by humans.",
     "threatened_about": "This species is likely to become in danger of extinction in the future.",
     "introduced_about": "This species was brought to this area by humans, and doesn’t naturally occur here.",
-    "got_it": "Got it!",
-    "wikipedia": "Source: Wikipedia",
-    "wikipedia_1": "Wikipedia",
+    "got_it": "Схванах!",
+    "wikipedia": "Източник: Уикипедия",
+    "wikipedia_1": "Уикипедия",
     "similar": "Similar Species",
     "similar_about": "Organisms commonly misidentified as this species.",
     "similar_no_species": "Looks like there haven’t been many similar species observed nearby!",
-    "plant": "plant",
-    "amphibian": "amphibian",
-    "fungi": "fungi",
-    "fish": "fish",
-    "reptile": "reptile",
-    "arachnid": "arachnid",
-    "bird": "bird",
-    "insect": "insect",
-    "mollusk": "mollusk",
-    "mammal": "mammal",
+    "plant": "растение",
+    "amphibian": "земноводно",
+    "fungi": "гъби",
+    "fish": "риба",
+    "reptile": "влечуго",
+    "arachnid": "паякообразно",
+    "bird": "птица",
+    "insect": "насекомо",
+    "mollusk": "мекотело",
+    "mammal": "бозайник",
     "species_saved": "This species is saved to your observations.",
     "you": "Hey look, it’s you! Get outside and find some wild species to learn even more about them.",
     "internet_error": "We need the internet to generate the species detail screen. Tap to try again.",
     "no_photos_found": "No photos found for this species.",
-    "copied": "COPIED!"
+    "copied": "КОПИРАНО!"
   },
   "about": {
     "header": "About",
@@ -568,7 +568,7 @@
     "original": "Seek was originally created with support from HHMI Tangled Bank Studios and enhanced with support from Our Planet on Netflix and WWF.",
     "designed_by": "Designed & developed by the iNaturalist team:",
     "inat_team_credits": "Abhas Misraraj, Amanda Bullington, Alex Shepard, Scott Loarie, Ken-ichi Ueda, Carrie Seltzer, Tony Iwane, Patrick Leary, and Yaron Budowski. Special thanks to Grant Van Horn from Visipedia for help with the computer vision technology, and the iNaturalist community.",
-    "version": "Version",
+    "version": "Версия",
     "help": "For help with Seek, please email help+seek@inaturalist.org.",
     "translators": "We are grateful for the translation assistance provided by the crowdin.com community, especially: Abdelghani Hourani, Carnifex, cgalindo, Daniele Seglie, Eduardo Martínez, Édson Souza Jr., Galder Gonzalez Larrañaga, Gideon Wentink, Johan Liljeblad, katunchik, Kevin Matthew, Kiara Suzuki, Lekkim, Marcel Hospers, Martin Reith, Monica Nieminen, Nicolae Liviu, Nuwan Wijayaweera, saariko, Sakatur, Sebastian Jasiński, TheKakarinka, Wouter Koch, and Yulia Lygina.",
     "join_crowdin": "To join the Seek translation team, please visit https://crowdin.com/project/seek"
@@ -576,8 +576,8 @@
   "posting": {
     "header": "Post to iNaturalist",
     "notes": "Add notes here",
-    "date": "date",
-    "location": "location",
+    "date": "дата",
+    "location": "местоположение",
     "geoprivacy": "Геоповерителност",
     "open": "Отвори",
     "obscured": "Замаскирано",
@@ -674,14 +674,14 @@
     "header": "Seek Camera",
     "common_names": "Display Common Names",
     "scientific_names": "Display Scientific Names",
-    "donate": "Donate",
+    "donate": "Даряване",
     "donate_header": "Help support iNaturalist",
     "donate_description": "Enjoying Seek? Consider donating to iNaturalist! We depend on donations from people like you to keep our apps free.",
     "language": "In-app language",
     "device_settings": "Use device language settings",
     "auto_capture": "Automatically take a picture when the identification reaches species.",
     "species_detail": "Species detail",
-    "seasonality": "Seasonality",
+    "seasonality": "Сезонност",
     "seasonality_option_1": "Display seasonality based on worldwide iNaturalist observations",
     "seasonality_option_2": "Display seasonality based on iNaturalist observations near my current location (species not found near my location will have no seasonality)",
     "donate_ios": "Please visit the following link to make a donation to Seek:"
@@ -758,7 +758,7 @@
     "share_observation": "Share observation",
     "square": "Square",
     "original": "Original",
-    "options": "Options",
+    "options": "Възможности",
     "show_species_id": "Show species identification",
     "share": "Share to Facebook",
     "save_to_photo_library": "Save to photo library",
@@ -907,7 +907,7 @@
     "july_2022_action_molted_exoskeleton": "Откривали ли сте някога празен, излят екзоскелет? Екзоскелетите не растат заедно с животното, така че трябва да се линеят, докато растат.",
     "august_2022_challenge_name_seed_dispersal": "Seed Dispersal Challenge",
     "august_2022_mission_1": "Find 3 species from:\n\n-Class Pinopsida (Conifers);\nSubphylum Angiospermae (Flowering plants)",
-    "august_2022_mission_2": "Find 3 species from:\n\n-Class Aves (Birds);\nClass Mammalia (Mammals)\nFamily Formicidae (Ants)",
+    "august_2022_mission_2": "Find 3 species from:\n\n-Class Aves (Birds);\nClass Mammalia (Mammals);\nFamily Formicidae (Ants)",
     "august_2022_description_seeds_are_a_lifestage": "Seeds are a lifestage of plants that can be easily moved. Many conifers and flowering plants have adapted fruits and seeds to be transported by wind, water, or animals. Many species of birds, mammals, and even ants can disperse seeds.",
     "august_2022_action_largest_species_seed_dispersing": "What is the largest species of seed dispersing animal near you? What kinds of seeds can it disperse? When animals swallow seeds whole, you may be able to find seeds in scat (also known as poop). Observations of scat count as evidence of an organism, but sometimes scat can be difficult to identify.",
     "september_2022_challenge_name_photosynthesis": "Photosynthesis Challenge",
