--- a/translations/en.json
+++ b/translations/en.json
@@ -667,7 +667,7 @@
   },
   "debug": {
     "logs": "Send debug logs by email",
-    "copy_logs": "Tap here to copy the content of debug logs into clipboard. Then paste it into an email and send to help+seek@inaturalist.org"
+    "copy_logs": "Sending an email did not succeed? Then tap here to copy the content of debug logs into clipboard. Then paste it into an email and send to help+seek@inaturalist.org"
   },
   "shortcut": {
     "seek_camera": "Seek Camera",
